--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
 
 ###> symfony/framework-bundle ###
-#/.env.local
-#/.env.local.php
-#/.env.*.local
-#/config/secrets/prod/prod.decrypt.private.php
-#/public/bundles/
-#/var/
-#/vendor/
+/.env.local
+/.env.local.php
+/.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/src/.preload.php
+/var/
+/vendor/
 ###< symfony/framework-bundle ###
-#.phpunit
-#.phpunit.result.cache
-#/phpunit.xml 
