--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "symfony/twig-bundle": "5.1.*",
         "symfony/yaml": "5.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^3.0"
+        "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
     },
